# kokudo

./: pyproject.toml
data/: UseCol.yml
notebook/: base.ipynb  feature.ipynb  mesh.ipynb
