[project]
name = "kokudo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "polars>=1.33.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]

